# aikakim

./: .gitignore  flake.nix  meson.build
data/: aikadm.gresource.xml  meson.build
data/scss/: main.scss  meson.build
data/ui/: meson.build  window.blp
nix/: devshell.nix  package.nix
src/: aikakim.vala  dbus.vala  ensure-types.vala  meson.build  window.vala  zwp-text-input-v3.vapi  zwp_text_input_v3.h
